// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChangeEmailForm > disable email input and display loading on the button while loading 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <p>
      Change the email address associated to your INSPIRE account. This is used by the INSPIRE system to contact you automatically (e.g. job ad closing, submission confirmation, etc.).
    </p>
    <div
      class="ant-row flex-email pt3 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space-compact css-dev-only-do-not-override-mncuj7 ant-space-compact-block"
                >
                  <span
                    class="ant-input-affix-wrapper css-dev-only-do-not-override-mncuj7 ant-input-outlined ant-input-compact-item ant-input-compact-first-item ant-input-compact-last-item"
                  >
                    <input
                      class="ant-input css-dev-only-do-not-override-mncuj7"
                      data-test-id="email"
                      data-testid="email"
                      form="[object Object]"
                      name="email"
                      placeholder="Email"
                      type="email"
                      value="test@test.pl"
                    />
                    <span
                      class="ant-input-suffix"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-loading"
        data-test-id="submit-email"
        data-testid="submit-email"
        disabled=""
        type="submit"
      >
        <span
          class="ant-btn-icon ant-btn-loading-icon"
        >
          <span
            aria-label="loading"
            class="anticon anticon-loading anticon-spin"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </span>
        <span>
          Change
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ChangeEmailForm > renders page 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <p>
      Change the email address associated to your INSPIRE account. This is used by the INSPIRE system to contact you automatically (e.g. job ad closing, submission confirmation, etc.).
    </p>
    <div
      class="ant-row flex-email pt3 css-dev-only-do-not-override-mncuj7"
    >
      <div
        class="ant-form-item css-dev-only-do-not-override-mncuj7 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19 css-dev-only-do-not-override-mncuj7"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space-compact css-dev-only-do-not-override-mncuj7 ant-space-compact-block"
                >
                  <span
                    class="ant-input-affix-wrapper css-dev-only-do-not-override-mncuj7 ant-input-outlined ant-input-compact-item ant-input-compact-first-item ant-input-compact-last-item"
                  >
                    <input
                      class="ant-input css-dev-only-do-not-override-mncuj7"
                      data-test-id="email"
                      data-testid="email"
                      form="[object Object]"
                      name="email"
                      placeholder="Email"
                      type="email"
                      value="test@test.pl"
                    />
                    <span
                      class="ant-input-suffix"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        data-test-id="submit-email"
        data-testid="submit-email"
        disabled=""
        type="submit"
      >
        <span>
          Change
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;
